PermutationTest release 1.0